@@ -274,7 +274,7 @@ class MailinRunner2(object):
         from_email = get_setting(self.root, 'postoffice.bounce_from_email')
         if from_email is None:
             from_email = get_setting(self.root, 'admin_email')
-        self.queue.bounce(message, mailer.send, from_email, error)
+        self.queue.bounce(message, wrap_send(mailer.send), from_email, error)
 
     def bounce_message_throttled(self, message):
         mailer = getUtility(IMailDelivery)
@@ -295,7 +295,7 @@ class MailinRunner2(object):
         ).encode('UTF-8'), 'UTF-8')
 
         self.queue.bounce(
-            message, mailer.send, from_email,
+            message, wrap_send(mailer.send), from_email,
             bounce_message=bounce_message
         )
 
@@ -305,8 +305,15 @@ class MailinRunner2(object):
         if from_email is None:
             from_email = get_setting(self.root, 'admin_email')
         error = traceback.format_exc()
-        self.queue.quarantine(message, error, mailer.send, from_email)
+        self.queue.quarantine(message, error, wrap_send(mailer.send),
+                              from_email)
         return error
 
     def close(self):
         self.closer()
+
+
+def wrap_send(send):
+    def wrapper(mfrom, mto, message):
+        send(mto, message)
+    return wrapper
